# hand-rekog

./: .gitignore  README.md  debug.ipynb  eval.py  predict.py  pyproject.toml  requirements.txt  train.py
config/: bbox_regressor.py  config.py
dataset/: custom_tensor_dataset.py  dataset.py  preprocessing.py
dataset/images/: state.json
models/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/variables/: variables.index
